# resnet50_implementation

./: .gitignore  RN50_jay.py  ResNet50Model.py  SF_task.ipynb  experiments.ipynb  pyproject.toml  train.py
