[tool.poetry]
name = "resnet50-implementation"
version = "0.1.0"
description = ""
authors = ["swynml <swynimko@gmail.com>"]
readme = "README.md"
packages = [{include = "resnet50_implementation"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
mlflow = "^1.29.0"
torchvision = "^0.13.1"
pytorch-lightning = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
